@@ -1,5 +1,27 @@
 val scala3Version = "3.2.2"
 
+ThisBuild / scalaVersion := scala3Version
+ThisBuild / version := "1.0"
+ThisBuild / organization := "com.nojipiz"
+
+val unnamedJavaOptions = List(
+  "-XX:+IgnoreUnrecognizedVMOptions",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.net=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+  "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+)
+
 libraryDependencySchemes += "com.softwaremill.sttp.apispec" %% "openapi-model" % "early-semver"
 libraryDependencySchemes += "com.softwaremill.sttp.apispec" %% "apispec-model" % "early-semver"
 
@@ -20,7 +42,7 @@ val sparkDependencies = Seq(
 ) 
 
 val sparkCompatDependencies = Seq(
-  "io.github.vincenzobaz" %% "spark-scala3" % "0.1.5",
+  "io.github.vincenzobaz" %% "spark-scala3" % "0.1.6",
   "org.apache.logging.log4j" % "log4j-core" % "2.20.0",
   //"org.apache.logging.log4j" % "log4j-to-slf4j" % "2.20.0" // -> Only inlude in assembly
 )
@@ -28,6 +50,7 @@ val sparkCompatDependencies = Seq(
 val zioDependencies = Seq(
   "dev.zio" %% "zio" % zioVersion,
   "dev.zio" %% "zio-http" % zioHttpVersion,
+  "dev.zio" %% "zio-logging" % "2.1.12"
 )
 
 val tapirDependencies = Seq(
@@ -62,8 +85,7 @@ lazy val root = project
 .in(file("."))
 .settings(
     name := "crm_backend",
-    version := "0.1.0-SNAPSHOT",
-    scalaVersion := scala3Version,
+    version := "1.0",
 
     libraryDependencies ++= zioDependencies,
     libraryDependencies ++= quillDependencies,
@@ -73,11 +95,16 @@ lazy val root = project
     libraryDependencies ++= sparkCompatDependencies,
     libraryDependencies ++= emailDependencies,
     libraryDependencies ++= testingDependencies,
-  )
+
+    run / fork := true,
+    run / javaOptions ++= unnamedJavaOptions
+ )
 
 testFrameworks += new TestFramework("zio.test.sbt.ZTestFramework")
 
 assembly / assemblyMergeStrategy := {
+  case path if path.contains("META-INF/services") =>
+    MergeStrategy.concat
   case PathList("META-INF", "maven", "org.webjars", "swagger-ui", "pom.properties") =>
     MergeStrategy.singleOrError
   case PathList("META-INF", "resources", "webjars", "swagger-ui", xs@_*) =>
